--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,4 @@
 public net.minecraft.world.item.crafting.RecipeManager recipes
+public-f net.minecraft.world.item.crafting.RecipeManager RECIPE_PROPERTY_SETS
+public net.minecraft.world.item.crafting.SingleItemRecipe result()Lnet/minecraft/world/item/ItemStack;
+public net.minecraft.world.item.crafting.RecipeManager forSingleInput(Lnet/minecraft/world/item/crafting/RecipeType;)Lnet/minecraft/world/item/crafting/RecipeManager$IngredientExtractor;
