--- a/gradle.properties
+++ b/gradle.properties
@@ -25,16 +25,16 @@ parchment_mappings_version=2025.03.23
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=wumboskiln
 # The human-readable display name for the mod.
-mod_name=WumbosKiln
+mod_name=Wumbo's Kiln
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=1.0-SNAPSHOT
+mod_version=1.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=wumbologymajor
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=
+mod_authors=WumbologyMajor
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=
+mod_description=Wumbo's kiln adds a simple kiln block that processes smelting recipes that don't go in blast furnaces or smokers. Like those two blocks, it is twice as fast. Great if you're like me and hate waiting for ages to smelt glass in the early game of kitchen-sink packs.
